fix z-index

--- a/client/src/components/AddressFinder/AddressFinder.css
+++ b/client/src/components/AddressFinder/AddressFinder.css
@@ -63,6 +63,7 @@
     position: relative;
     max-height: 300px;
     overflow: overlay;
+    z-index: 1;
 }
 #addressFinder #streetHintsList button{
     width: 100%;
@@ -81,6 +82,7 @@
     position: relative;
     height: 300px;
     overflow: overlay;
+    z-index: 1;
 }
 #addressFinder #houseHintsList button{
     width: 100%;
